<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".Help"
    android:layout_centerInParent="true"
    >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/native_banner_ad_container"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp"
        >






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionthree"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/t3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tap to View Answer"
            android:maxLines="2"
            android:onClick="expandA3"
            android:textSize="15sp"/>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="15sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tap to View Answer"
        android:maxLines="2"
        android:onClick="expandA1"
        android:textSize="15sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="15sp"
        android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tap to View Answer"
            android:maxLines="2"
            android:onClick="expandA2"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/t4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tap to View Answer"
            android:maxLines="2"
            android:onClick="expandA4"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limitation"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/t5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tap to View Answer"
            android:maxLines="2"
            android:onClick="expandA5"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/side"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_marginTop="15dp"/>




    </LinearLayout>

    </ScrollView>

            <com.facebook.ads.NativeAdLayout
                android:id="@+id/native_banner_ad_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />


</RelativeLayout>